Overflow on Mobile Fix

--- a/competitions/stylesheet.css
+++ b/competitions/stylesheet.css
@@ -199,7 +199,7 @@ h5{
 }
 #competitions .competition .competition-right{
   background: url('../Assets/competitions_back.png');
-  height: 25vh;
+  min-height: 25vh;
   color: white;
   background-size: cover;
   text-align: justify;
